[package]
edition = "2021"
name = "rust-jobscheduler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.56"
async-trait = "0.1.52"
chrono = "0.4.19"
futures = "0.3.21"
serde = {version = "1.0.136", features = ["derive"]}
sqlx = {version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"]}
thiserror = "1.0.30"
tokio = {version = "1", features = ["full"]}
ulid = {version = "0.5.0", features = ["uuid"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
